feat: interface 구현, main_state.dart 로 상태관리

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ app.*.map.json
 /android/app/release
 
 api_keys.dart
+
+# "JSON to Dart Model" generator tracker files locations.
+/.json_models/
+models.jsonc
