--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.3
   json_annotation: ^4.6.0
   freezed_annotation: ^2.1.0
+  flutter_hooks: ^0.18.5+1
+  hooks_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
